# substrate-native-nostd-demo

./: .gitignore  README.md  diff.sh
compile/: Cargo.toml
compile/nostdlib/: Cargo.toml
notcompile/: Cargo.toml
notcompile/nostdlib/: Cargo.toml
notcompile/nostdlib/src/: lib.rs
notcompile/src/: main.rs
