[package]
name = "nostdlib"
version = "0.1.0"
authors = ["h4x3rotab <h4x3rotab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies.sp-runtime]
git = "https://github.com/h4x3rotab/substrate"
branch = "native-nostd"
default-features = false

[dependencies.sp-runtime-interface]
git = "https://github.com/h4x3rotab/substrate"
branch = "native-nostd"
default-features = false

[dependencies.sp-io]
git = "https://github.com/h4x3rotab/substrate"
branch = "native-nostd"
default-features = false

[dependencies.sp-core]
git = "https://github.com/h4x3rotab/substrate"
branch = "native-nostd"
default-features = false

[dependencies.sp-application-crypto]
git = "https://github.com/h4x3rotab/substrate"
branch = "native-nostd"
default-features = false

[features]
default = [
  "sp-runtime-interface/disable_target_static_assertions",
  "sp-io/disable_panic_handler",
  "sp-io/disable_oom",
  "sp-io/disable_allocator",
  "sp-core/full_crypto",
  "sp-application-crypto/full_crypto",
  "sp-io/native-nostd",  # enable native-nostd for sp-io::hashing
]
